# Parallel_Image_Processing_Pipeline

./: .gitignore  CMakeLists.txt  README.md  analyze_results.py
mpi/: main.cpp
openmp/: main.cpp
results/: mpi_benchmark_results.csv  openmp_benchmark_results.csv
scripts/: analyze_results.py  compare_openmp_mpi.py  compute_efficiency.py  compute_mse.py
serial/: main.cpp
